--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,11 @@ import Card from "../components/Card.astro";
         body="Upscale your images with AI"
       />
       <Card
+      href="https://blog.glamboyosa.xyz"
+      title="My Blog"
+      body="Osa's knowledge base"
+    />
+      <Card
         href="https://github.com/glamboyosa"
         title="Me/GitHub"
         body="My GitHub profile."
