--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
+
 ---
 export interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+import { GoogleFontsOptimizer } from 'astro-google-fonts-optimizer'
 ---
 
 <!DOCTYPE html>
@@ -14,6 +16,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Lacquer&family=Inter:wght@400;500;600;700&family=Rubik+Marker+Hatch&display=swap" />
 		<title>{title}</title>
 	</head>
 	<body>
