feat: PKCE spotify, save to upstash and do last plated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { ScrambleName } from "@/components/text-scramble";
 import { ShimmerName } from "@/components/text-shimmer";
 import "@/styles/global.css";
 
-const accessToken = Astro.cookies.get('spotify_token')?.value;
+const accessToken = Astro.cookies.get('spotify_access_token')?.value;
 ---
 
 <Layout title="Timothy Osa Ogbemudia">
