feat: layout improvements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import "@/styles/global.css";
 const accessToken = Astro.cookies.get('spotify_access_token')?.value;
 ---
 
-<Layout title="Timothy Osa Ogbemudia">
+<Layout title="Timothy Osa Ogbemudia" description="Timothy Osa Ogbemudia is a product engineer who loves turning ideas into real, working systems.">
   <div class="mx-auto px-4 pt-8 pb-2 md:max-w-[900px] max-w-full tracking-wider h-screen overflow-x-hidden md:overflow-visible md:text-justify">
     <header class="mb-8" >
       <div class="cursor-pointer">
