settle for ethos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const accessToken = Astro.cookies.get('spotify_access_token')?.value;
           <p class="leading-relaxed text-sm">
             I'm passionate about creating things developers love—whether it's <span class="font-medium">SDKs</span>, <span class="font-medium">internal tools</span>, or <span class="font-medium">full-stack systems</span> that just feel right. There's nothing better than seeing something you built make someone's life easier or more enjoyable. Along the way, I've collaborated with teams across <span class="italic">Texas, SF, NYC, London and the EU</span> and have developed a <a href="https://zesty-blanket-089.notion.site/Timothy-Osa-Ogbemudia-s-Handbook-Engineering-Design-More-d21a912f9f4e4c07991c3e39e3c0f477?pvs=74" target="_blank" rel="noopener noreferrer" class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5">personal handbook <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
   <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
-</svg></a> along the way.
+</svg></a> on my ethos.
           </p>
           
           <p class="leading-relaxed text-sm">
