--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const accessToken = Astro.cookies.get('spotify_access_token')?.value;
           </p>
           
           <p class="leading-relaxed text-sm">
-            When I'm not coding, you'll probably find me cooking up something experimental in the kitchen, watching movies (<span class="font-medium">60 logged on Letterboxd</span> this year and counting!), or gaming. I'm always learning, tinkering, and looking for the next exciting challenge.
+            When I'm not coding, you'll probably find me cooking up something experimental in the kitchen, watching movies (<span class="font-medium">70+ logged on Letterboxd</span> this year and counting!), or gaming. I'm always learning, tinkering, and looking for the next exciting challenge.
           </p>
         </section>
         <section class="space-y-4 flex justify-center items-center">
