--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,72 +5,146 @@ import { ScrambleName } from "@/components/text-scramble";
 import { ShimmerName } from "@/components/text-shimmer";
 import "@/styles/global.css";
 
-const accessToken = Astro.cookies.get('spotify_access_token')?.value;
+const accessToken = Astro.cookies.get("spotify_access_token")?.value;
 ---
 
-<Layout title="Timothy Osa Ogbemudia" description="Timothy Osa Ogbemudia is a product engineer who loves turning ideas into real, working systems.">
-  <div class="mx-auto px-4 pt-8 pb-2 md:max-w-[900px] max-w-full tracking-wider h-auto md:h-screen overflow-x-hidden md:overflow-visible md:text-justify">
-    <header class="mb-8" >
+<Layout
+  title="Timothy Osa Ogbemudia"
+  description="Timothy Osa Ogbemudia is a product engineer who loves turning ideas into real, working systems."
+>
+  <div
+    class="mx-auto px-4 pt-8 pb-2 md:max-w-[900px] max-w-full tracking-wider h-auto md:h-screen overflow-x-hidden md:overflow-visible md:text-justify"
+  >
+    <header class="mb-8">
       <div class="cursor-pointer">
-        <h1 class="text-xl font-medium"><ShimmerName client:load/> ✨</h1>
-        <ScrambleName client:load/>
+        <h1 class="text-xl font-medium"><ShimmerName client:load /> ✨</h1>
+        <ScrambleName client:load />
+        <a
+          href="/uses"
+          class="text-sm hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
+          >/uses</a
+        >
       </div>
       <hr />
     </header>
-    <div class="flex  md:flex-nowrap flex-wrap md:space-x-8">
+    <div class="flex md:flex-nowrap flex-wrap md:space-x-8">
       <div class="hidden md:block w-64 text-sm"></div>
       <main class="flex-grow mx-auto max-w-full sm:px-4 space-y-6">
         <section class="space-y-4">
           <h2 class="text-lg font-medium">whoami</h2>
           <p class="leading-relaxed text-sm">
-            Hey, I'm Osa, known on the www as glamboyosa. I'm a product engineer who loves turning ideas into real, working systems. I've spent my time building with Go, TypeScript, Next.js, and Python—languages and frameworks that keep me excited about shipping fast! But I'm always experimenting with new ones.
+            Hey, I'm Osa, known on the www as glamboyosa. I'm a product engineer
+            who loves turning ideas into real, working systems. I've spent my
+            time building with Go, TypeScript, Next.js, and Python—languages and
+            frameworks that keep me excited about shipping fast! But I'm always
+            experimenting with new ones.
           </p>
 
           <p class="leading-relaxed text-sm">
-            I'm passionate about creating things developers love—whether it's <span class="font-medium">SDKs</span>, <span class="font-medium">internal tools</span>, or <span class="font-medium">full-stack systems</span> that just feel right. There's nothing better than seeing something you built make someone's life easier or more enjoyable. Along the way, I've collaborated with teams across <span class="italic">Texas, SF, NYC, London and the EU</span> and have developed a <a href="https://zesty-blanket-089.notion.site/Timothy-Osa-Ogbemudia-s-Handbook-Engineering-Design-More-d21a912f9f4e4c07991c3e39e3c0f477?pvs=74" target="_blank" rel="noopener noreferrer" class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5">personal handbook <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
-</svg></a> on my ethos.
+            I'm passionate about creating things developers love—whether it's <span
+              class="font-medium">SDKs</span
+            >, <span class="font-medium">internal tools</span>, or <span
+              class="font-medium">full-stack systems</span
+            > that just feel right. There's nothing better than seeing something
+            you built make someone's life easier or more enjoyable. Along the way,
+            I've collaborated with teams across <span class="italic"
+              >Texas, SF, NYC, London and the EU</span
+            > and have developed a <a
+              href="https://zesty-blanket-089.notion.site/Timothy-Osa-Ogbemudia-s-Handbook-Engineering-Design-More-d21a912f9f4e4c07991c3e39e3c0f477?pvs=74"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
+              >personal handbook <svg
+                class="w-4 h-4"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25"
+                ></path>
+              </svg></a
+            > on my ethos.
           </p>
-          
+
           <p class="leading-relaxed text-sm">
-            When I'm not coding, you'll probably find me cooking up something experimental in the kitchen, watching movies (<span class="font-medium">70+ logged on Letterboxd</span> this year and counting!), or gaming. I'm always learning, tinkering, and looking for the next exciting challenge.
+            When I'm not coding, you'll probably find me cooking up something
+            experimental in the kitchen, watching movies (<span
+              class="font-medium">70+ logged on Letterboxd</span
+            > this year and counting!), or gaming. I'm always learning, tinkering,
+            and looking for the next exciting challenge.
+          </p>
+          <p class="leading-relaxed text-sm mt-4">
+            Currently building <a
+              href="https://swig.glamboyosa.xyz"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
+              >Swig</a
+            > and <span class="italic">wanderlust</span>, an app for nomads <span
+              class="text-xs">(shhh, it's a secret)</span
+            >.
           </p>
         </section>
         <section class="space-y-4 flex justify-center items-center">
-          <NowPlaying client:load accessToken={accessToken}/>
+          <NowPlaying client:load accessToken={accessToken} />
         </section>
         <section class="space-y-4">
           <h2 class="text-base font-medium">Let's get in touch</h2>
           <div class="flex gap-4">
-            <a 
-              href="mailto:ogbemudiatimothy@gmail.com" 
+            <a
+              href="mailto:ogbemudiatimothy@gmail.com"
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
             >
               Email
             </a>
-            <a 
-              href="https://animations.glamboyosa.xyz/" 
-              target="_blank" 
+            <a
+              href="https://animations.glamboyosa.xyz/"
+              target="_blank"
               rel="noopener noreferrer"
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
             >
               Animations
-              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+              <svg
+                width="15"
+                height="15"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                ><path
+                  d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"></path></svg
+              >
             </a>
-            <a 
-              href="https://github.com/glamboyosa" 
-              target="_blank" 
+            <a
+              href="https://github.com/glamboyosa"
+              target="_blank"
               rel="noopener noreferrer"
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
             >
               GitHub
-              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+              <svg
+                width="15"
+                height="15"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                ><path
+                  d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"></path></svg
+              >
             </a>
           </div>
         </section>
       </main>
     </div>
-    </div>
+  </div>
 </Layout>
-
-
