--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -15,7 +15,7 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
         class="mx-auto px-4 pt-8 pb-2 md:max-w-[900px] max-w-full tracking-wider h-auto md:h-screen overflow-x-hidden md:overflow-visible md:text-justify"
     >
         <header class="mb-8">
-            <div class="cursor-pointer">
+            <div class="cursor-pointer" onclick="window.location.href='/'">
                 <h1 class="text-xl font-medium">
                     <ShimmerName client:load /> ✨
                 </h1>
