--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
         </div>
         <a
           href="/uses"
-          class="text-sm hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
+          class="text-sm -mt-10 hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
           >/uses</a
         >
       </div>
