--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,16 +16,11 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
     class="mx-auto px-4 pt-8 pb-2 md:max-w-[900px] max-w-full tracking-wider h-auto md:h-screen overflow-x-hidden md:overflow-visible md:text-justify"
   >
     <header class="mb-8">
-      <div class="flex items-center gap-12">
+      <div class="cursor-pointer">
         <div class="cursor-pointer">
           <h1 class="text-xl font-medium"><ShimmerName client:load /> ✨</h1>
           <ScrambleName client:load />
         </div>
-        <a
-          href="/uses"
-          class="text-sm -mt-10 hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
-          >/uses</a
-        >
       </div>
       <hr />
     </header>
@@ -103,6 +98,12 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
             >
               Email
+            </a>
+            <a
+              href="/uses"
+              class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200 inline-flex items-center gap-0.5"
+            >
+              Uses
             </a>
             <a
               href="https://animations.glamboyosa.xyz/"
