--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
             > that just feel right. There's nothing better than seeing something
             you built make someone's life easier or more enjoyable. Along the way,
             I've collaborated with teams across <span class="italic"
-              >Texas, SF, NYC, London and the EU</span
+              >Texas, SF, NYC, Brazil, Asia, London and the EU</span
             > and have developed a <a
               href="https://zesty-blanket-089.notion.site/Timothy-Osa-Ogbemudia-s-Handbook-Engineering-Design-More-d21a912f9f4e4c07991c3e39e3c0f477?pvs=74"
               target="_blank"
