--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,8 +82,14 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
               rel="noopener noreferrer"
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
               >Swig</a
-            > and <span class="italic">wanderlust</span>, an app for nomads <span
-              class="text-xs">(shhh, it's a secret)</span
+            > and <a
+              href="https://swig.glamboyosa.xyz"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="hover:bg-slate-200 italix px-1.5 rounded transition-all duration-200"
+              >Wanderlust</a
+            > , an app for nomads <span class="text-xs"
+              >(shhh, it's a secret)</span
             >.
           </p>
         </section>
