loooooool use right aurl

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ const accessToken = Astro.cookies.get("spotify_access_token")?.value;
               class="hover:bg-slate-200 px-1.5 rounded transition-all duration-200"
               >Swig</a
             > and <a
-              href="https://swig.glamboyosa.xyz"
+              href="https://www.trywanderlust.app"
               target="_blank"
               rel="noopener noreferrer"
               class="hover:bg-slate-200 italix px-1.5 rounded transition-all duration-200"
